<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="90dp"
        tools:text="@string/set_net"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_1_px"
        android:background="@color/colorDialogLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negativeButton"
            style="@style/Dialog.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <View
            android:layout_width="@dimen/line_1_px"
            android:layout_height="match_parent"
            android:background="@color/colorDialogLine" />

        <Button
            android:id="@+id/positiveButton"
            style="@style/Dialog.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>