<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#66ff0000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_icon_day"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                tools:background="@drawable/w100_sunny_day" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_cond_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="晴" />

                <TextView
                    android:id="@+id/tv_tmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20"
                    tools:text="14°/3°" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rect_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginTop="20dp"
                android:text="@string/more_parameters"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="05:34" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="18:34" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_direction"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="东南风" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="3-5级" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="90%" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="1004hPa" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_0dot4_dp"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:background="@color/colorMoreParameterDivide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    tools:text="10km" />
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/bannerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" >
            </FrameLayout>


        </LinearLayout>


    </LinearLayout>


</ScrollView>